--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -93,6 +93,9 @@
             </p>
         </footer>
     </div>
+    <div class="vert-layout SplashScreen noselect" id="SplashScreen-main">
+        <h1 style="visibility: hidden;">SendSecretMsg</h1>
+    </div>
     <script type="module" src="/msg/script.js"></script>
 </body>
 </html>
