--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -163,7 +163,7 @@
                     Your friends can then send you a secret message.
                 </p>
                 <p class="noselect link">
-                    <a id="ph-a-your-link" href="https://sendsecretmsg.web.app/msg?id=39399393">https://sendsecretmsg.web.app/msg?id...</a>
+                    <a id="ph-a-your-link" href="/msg?id=39399393">https://sendsecretmsg.web.app/msg?id...</a>
                 </p>
                 <button class="noselect" id="btn-share-link">Share link</button>
             </div>
