--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -64,6 +64,7 @@
         div.root div.messages-root {
             padding: 10px;
             width: calc(100% - 20px);
+            max-width: 1080px;
             align-items: center;
             border-radius: 0;
             color: var(--light-fgcolor);
@@ -78,8 +79,8 @@
         } 
         div.root div.messages-root div.messages div.message {
             margin: 10px auto;
-            padding: 10px 10px 20px;
-            width: calc(100% - 40px);
+            padding: 7px 12px 20px;
+            width: calc(100% - 22px);
             max-width: 400px;
             color: var(--prim-fgcolor);
             background-color: var(--prim-bgcolor);
@@ -96,8 +97,8 @@
             margin: 0;
             padding: 0;
             position: relative;
-            top: -5px;
-            right: -20px;
+            top: -2px;
+            right: -19px;
             color: #666;
             font-size: 1.5rem;
             text-align: right;
@@ -123,8 +124,8 @@
                 grid-template-columns: auto auto;
             }
             div.root div.messages-root div.messages div.message {
-                width: calc(100% - 60px);
-                max-width: calc(100% - 60px);
+                width: calc(100% - 44px);
+                max-width: calc(100% - 44px);
                 margin: 10px;
             }
         }
