--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -52,6 +52,9 @@
             background-color: var(--tert-bgcolor);
             box-shadow: 0px 0px 7.5px 0px var(--dark-shadow-color);
         }
+        div.root div.send-msg div.vert-layout textarea.msg {
+            height: 100px;
+        }
         div.root div.send-msg div.vert-layout button {
             width: auto;
             min-width: 50%;
