added loader animation for splashscreen

--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -102,7 +102,7 @@
         </footer>
     </div>
     <div class="vert-layout SplashScreen noselect" id="SplashScreen-main">
-        <h1 style="visibility: hidden;">SendSecretMsg</h1>
+        <div class="loadingAnim"><h1 style="visibility: visible;">×</h1></div>
     </div>
     <script type="module" src="/msg/script.js"></script>
 </body>
