--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -196,7 +196,7 @@
         </footer>
     </div>
     <div class="vert-layout SplashScreen noselect" id="SplashScreen-main">
-        <h1 style="visibility: hidden;">SendSecretMsg</h1>
+        <div class="loadingAnim"><h1 style="visibility: hidden;">×</h1></div>
     </div>
     <!-- HTML sanitizer -->
     <script src="https://cdn.jsdelivr.net/gh/jitbit/HtmlSanitizer@master/HtmlSanitizer.js"></script>
