added loader animation for splashscreen

--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -196,7 +196,8 @@
         </footer>
     </div>
     <div class="vert-layout SplashScreen noselect" id="SplashScreen-main">
-        <div class="loadingAnim"><h1 style="visibility: hidden;">×</h1></div>
+        <div class="loadingAnim"></div>
+        <h1 style="margin-top: 20px; color: var(--dark-bgcolor);">Loading. Please wait...</h1>
     </div>
     <!-- HTML sanitizer -->
     <script src="https://cdn.jsdelivr.net/gh/jitbit/HtmlSanitizer@master/HtmlSanitizer.js"></script>
