--- a/development/public/register/index.html
+++ b/development/public/register/index.html
@@ -93,7 +93,8 @@
         </footer>
     </div>
     <div class="vert-layout SplashScreen noselect" id="SplashScreen-main">
-        <div class="loadingAnim"><h1 style="visibility: hidden;">×</h1></div>
+        <div class="loadingAnim"></div>
+        <h1 style="margin-top: 20px; color: var(--dark-bgcolor);">Loading. Please wait...</h1>
     </div>
     <script type="module" src="/register/script.js"></script>
 </body>
