--- a/development/public/register/index.html
+++ b/development/public/register/index.html
@@ -5,9 +5,14 @@
     <meta name="robots" content="noindex">
     <meta name="googlebot" content="noindex">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta property="og:title" content="SendSecretMsg">
+    <meta property="og:image" content="/og-image.png">
+    <meta property="og:description" content="Send anonymous message to your friends">
+    <meta property="og:url" content="https://sendsecretmsg.web.app">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <link rel="manifest" href="/a2hs.webmanifest">
+    <link rel="manifest" href="/site.webmanifest">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
     <meta name="theme-color" content="#be1558">
     <meta name="msapplication-navbutton-color" content="#be1558">
