added terms of usage

--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -68,6 +68,9 @@
             margin: 10px;
             font-size: 2rem;
         }
+        li {
+            margin-bottom: 7px;
+        }
     </style>
     <!-- NOTE: placeholder IDs are used to set text to HTML nodes using JS
          LIST of placeholders / buttons
@@ -97,6 +100,36 @@
                 </p>
                 <textarea class="msg placeholder" id="ph-textarea-msg" placeholder="Enter your message"></textarea>
                 <button class="noselect placeholder" id="btn-send">Send</button>
+                <p class="noselect info placeholder" style="
+                    margin: 0;
+                    justify-content: left;
+                    align-items: left;
+                    text-align: left; ">
+                    <div style="
+                        padding: 0;
+                        margin: 15px 0 7px;
+                        justify-content: left;
+                        align-items: left;
+                        text-align: left;
+                        font-weight: bold; ">
+                        Terms of usage
+                    </div>
+                    <ul style="
+                        margin-bottom: 3px;
+                        font-size: 0.82rem; ">
+                        <li>
+                            If you share a link of this site, you agree that we the developers at
+                            <a target="_blank" href="https://gitHub.com/CinexSoft" style="
+                                color: var(--tert-fgcolor);
+                                font-weight: bold; ">CinexSoft</a>
+                            take no responsibility for any kind of hate speech, racist, sexist,
+                            or other triggering remarks that you receive through this anonymous messaging platform.
+                        </li>
+                        <li>
+                            Share the link at your own risk.
+                        </li>
+                    </ul>
+                </p>
             </div>
         </div>
         <footer>
