--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -119,14 +119,15 @@
             text-align: right;
         }
         #ph-div-msg-0000 {
-            height: calc(60vh - 1.5rem - 50px);
+            height: calc(50vh - 1.5rem - 60px);
             justify-content: center;
             align-items: center;
         }
         @media only screen and (min-width: 460px) {
             div.root div.messages-root div.messages {
                 display: grid;
-                grid-template-columns: auto auto;
+                grid-template-rows: auto;
+                grid-template-columns: 50% 50%;
             }
             div.root div.messages-root div.messages div.message {
                 width: calc(100% - 44px);
