added script tag to include html sanitizer

--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -141,6 +141,8 @@
         <div class="loadingAnim"></div>
         <h1 style="margin-top: 20px; color: var(--dark-bgcolor);">Loading. Please wait...</h1>
     </div>
+    <!-- HTML sanitizer -->
+    <script src="https://cdn.jsdelivr.net/gh/jitbit/HtmlSanitizer@master/HtmlSanitizer.js"></script>
     <script type="module" src="/msg/script.js"></script>
 </body>
 </html>
