--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -70,6 +70,7 @@
         }
         li {
             margin-bottom: 7px;
+            text-align: justify;
         }
     </style>
     <!-- NOTE: placeholder IDs are used to set text to HTML nodes using JS
