--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -70,7 +70,6 @@
         }
         li {
             margin-bottom: 7px;
-            text-align: justify;
         }
     </style>
     <!-- NOTE: placeholder IDs are used to set text to HTML nodes using JS
@@ -121,7 +120,7 @@
                             <a target="_blank" href="https://gitHub.com/CinexSoft" style="
                                 color: var(--tert-fgcolor);
                                 font-weight: bold; ">CinexSoft</a>
-                            take no responsibility for any kind of hate speech, racist, sexist,
+                            are not responsible any kind of hate speech, racist, sexist,
                             or other triggering remarks that you receive through this anonymous messaging platform.
                         </li>
                         <li>
